fix: adding gap between project in tablets and refactoring

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ section {
   min-height: 100vh;
   background-color: var(--bg-color);
   display: grid;
-  place-items: center;
+  place-content: center;
 }
 
 /* Setting the background of the hero section to a gradient. */
@@ -116,6 +116,7 @@ section {
   width: auto;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .txt {
@@ -130,30 +131,21 @@ section {
   color: var(--txt-color);
 }
 
-.txt__under {
-  margin-top: 30px;
-  font-weight: 700;
-  color: rgb(83, 81, 81);
-  font-size: 1.3rem;
-}
-
 .desc {
-  padding: 0.5rem;
   font-weight: 500;
   color: var(--txt-color);
   opacity: 0.8;
 }
-.soclinks {
-margin-top: 1.9rem;
-}
+
 .btn {
   font-size: 1rem;
+  width: 30%;
+  text-align: center;
   background-color: transparent;
   border-radius: 5px;
   background: rgb(68, 68, 68);
   padding: 1rem;
   color: var(--txt-color);
-  margin-top: 0.5rem;
   opacity: 0.8;
 }
 
@@ -171,10 +163,6 @@ a.btn  {
   font-size: 3.7rem;
 }
 
-.exclamation {
-  color: #7b3fe4;
-}
-
 .right-hero {
   width: 380px;
   display: grid;
@@ -190,8 +178,8 @@ a.btn  {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 30px;
   align-items: center;
+  gap: 30px;
   padding: 1.875rem 0;
   text-align: center;
   color: var(--txt-color);
@@ -202,7 +190,6 @@ a.btn  {
   font-weight: bold;
 }
 .desc2 {
-  padding: 0.5rem;
   font-weight: 500;
   opacity: 0.8;
 }
@@ -245,28 +232,30 @@ a.btn  {
 .projects {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
+  gap: 30px;
   justify-content: center;
   padding: 1.875rem 0;
 }
 
 .project-heading {
-  padding: 1.875rem 0;
   font-size: 2rem;
   font-weight: bold;
   color: var(--txt-color);
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
-  place-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 3rem;
+   box-sizing: border-box;
 }
 
 .card {
+  flex: 1;
   border-radius: 12px;
 }
 
@@ -278,7 +267,7 @@ a.btn  {
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   width: 100%;
-  height: 160px;
+  height: 200px;
 }
 
 .card__content {
@@ -289,6 +278,7 @@ a.btn  {
   background-color: #3232327a;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+  width: 100%;
   height: 295px;
   color: var(--txt-color);
   backdrop-filter: blur( 4px );
@@ -347,6 +337,7 @@ a.btn  {
 .contact-heading {
   font-size: 2rem;
   font-weight: bold;
+  text-align: center;
 }
 .contactEmail {
   width: 100%;
@@ -416,43 +407,33 @@ opacity: 1;
     width: 860px;
     margin: auto;
   }
-  .hero {
-    padding-left: unset;
-  }
 
-  figcaption {
-    transform: translateY(-1rem);
-    padding-top: 0.8rem;
-    padding-bottom: 1rem;
-    margin-top: 4rem;
+  .btn {
+    width: 35%;
   }
-
   .right-hero{
-    width: 250px;
-    height: 250px;
+    width: 270px;
+    height: 270px;
   }
- 
-
-  .fig {
-    margin: 0 9.2rem;
-    padding: 0.2rem;
-  }
-
   .stackIcons img {
     width: 2.35rem;
     height: 2.35rem;
   }
-
   .cards {
-    gap: 20px;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    gap: 2rem;
   }
   .card {
-    width: 266px;
+    width: 414px;
+    flex: unset;
   }
-
+  .card__cover img {
+    height: 200px;
+  }
   .contactEmail {
     width: 100%;
-    height: 250px;
+    height: 245px;
   }
   .socials {
     left: 4px;
@@ -460,19 +441,23 @@ opacity: 1;
 }
 
 @media only screen and (min-width: 770px) and (max-width: 970px) {
+  .nav-menu {
+    gap: 2rem;
+  }
   .hero, .tech_stack, .projects, .contact {
     box-sizing: border-box;
     width: 680px;
     margin: auto;
   }
-
+  .hero {
+    padding: 80px 0;
+  }
   .hero {
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: repeat(2, auto);
     gap: 2rem;
     
   }
-
   .left-hero {
     width: 100%;
     padding-left: unset;
@@ -481,34 +466,32 @@ opacity: 1;
   .txt {
     font-size: 2.7;
   }
-
   .txt__upper {
     margin-top: 4.375rem;
   }
-
+  .btn {
+    margin: auto;
+  }
   .right-hero{
     width: 270px;
     height: 270px;
     margin: auto;
   }
-
   .stackIcons {
     gap: 35px;
     justify-content: center;
   }
-
   .cards {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(2, auto);
     gap: 2rem;
-    place-content: center;
+    flex-wrap: wrap;
   }
-
   .card {
-    width: 100%;
+    width: 324px;
+    flex: unset;
   }
-
+  .card__cover img {
+    height: 180px;
+  }
   #hero__img {
     margin-right: unset;
   }
@@ -601,6 +584,10 @@ opacity: 1;
     padding: unset;
     text-align: center;
   }
+  .btn {
+    width: 35%;
+    margin: auto;
+  }
   .right-hero{
     width: 250px;
     height: 250px;
@@ -622,21 +609,20 @@ opacity: 1;
     width: 2.7rem;
     height: 2.7rem;
   }
-
-  .fig {
-    margin: 0 4rem;
-    padding: 0.2rem;
-  }
-
   .cards {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, auto);
-    place-content: center;
+    box-sizing: border-box;
+    flex-wrap: wrap;
     gap: 1.8rem;
   }
   .card {
-    width: unset;
+    width: 100%;
+    flex: unset;
+  }
+  .card__cover  img{
+    height: 230px;
+  }
+  .content p {
+    width: 100%;
   }
 
   .stackIcons {
@@ -689,11 +675,17 @@ opacity: 1;
 
   .hero, .tech_stack, .projects, .contact {
     box-sizing: border-box;
-    width: 85%;
+    max-width: 85%;
     margin: auto;
   }
 
   .left-hero {
+    width: 100%;
+  }
+  .btn {
+    width: 45%;
+  }
+  .right-hero {
     width: 100%;
   }
 
@@ -715,11 +707,7 @@ opacity: 1;
   .card {
     width: 100%;
   }
-
-  .fig {
-    margin: 0 5rem;
-  }
-
+  
   .stackwrap {
     width: 110px;
     height: 80px;
@@ -727,6 +715,9 @@ opacity: 1;
 
   .stackIcons {
     gap: 25px;
+  }
+  .card__cover img {
+    height: 220px;
   }
 
   .socials {
@@ -745,11 +736,12 @@ opacity: 1;
   }
 
   .contactEmail {
+    width: 100%;
     height: 120px;
   }
 
   .contactEmail a {
-    font-size: 1.1rem;
+    font-size: 1rem;
     gap: 8px;
   }
 
@@ -762,20 +754,22 @@ opacity: 1;
 @media only screen and (max-width: 415px) {
   .hero, .tech_stack, .projects, .contact {
     box-sizing: border-box;
-    width: 85%;
+    max-width: 85vw;
     margin: auto;
   }
   .right-hero{
-    width: 250px;
-    height: 250px;
+    width: 230px;
+    height: 230px;
+  }
+  .btn {
+    width: 60%;
   }
   #hero__img {
     width: 260px;
     height: 260px;
   }
-
-  .fig {
-    margin: 0 1.5rem;
+  .card__cover img {
+    height: 200px;
   }
   .contactEmail {
     width: 100%;
@@ -788,22 +782,24 @@ opacity: 1;
 @media only screen and (max-width: 376px) {
   .hero, .tech_stack, .projects, .contact {
     box-sizing: border-box;
-    width: 90%;
+    max-width: 90vw;
     margin: auto;
   }
-  .right-hero {
-    width: 250px;
-    height: 250px;
+  .hero {
+    padding: 40px 0;
+  }
+  .btn {
+    width: 60%;
   }
   #hero__img {
     width: 100%;
   }
-
+  
   .fig {
     margin: 0 1rem;
   }
   .cards {
-    gap: 1.8rem;
+    gap: 1.5rem;
   }
   .card__content {
     padding: 10px;
